# pyproject-fmt-rust

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  tox.ini
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
rust/src/: build_system.rs  global.rs  main.rs  project.rs  ruff.rs
rust/src/data/: column-width.expected.toml  column-width.start.toml  ruff-21.expected.toml  ruff-21.start.toml  ruff-order.expected.toml  ruff-order.start.toml
rust/src/helpers/: array.rs  create.rs  pep508.rs  string.rs  table.rs
src/pyproject_fmt_rust/: __init__.py  _lib.pyi
tests/: test_main.py
